// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APM API tests trial apm_8.0.0 Service Map with data /api/apm/service-map returns the correct data 3`] = `
Array [
  Object {
    "data": Object {
      "agent.name": "rum-js",
      "id": "opbeans-rum",
      "service.environment": "testing",
      "service.name": "opbeans-rum",
      "serviceAnomalyStats": Object {
        "actualValue": 1020870.96774194,
        "anomalyScore": 0,
        "healthStatus": "healthy",
        "jobId": "apm-testing-41e5-high_mean_transaction_duration",
        "serviceName": "opbeans-rum",
        "transactionType": "page-load",
      },
    },
  },
  Object {
    "data": Object {
      "agent.name": "ruby",
      "id": "opbeans-ruby",
      "service.environment": "production",
      "service.name": "opbeans-ruby",
      "serviceAnomalyStats": Object {
        "actualValue": 62009.3356643357,
        "anomalyScore": 0,
        "healthStatus": "healthy",
        "jobId": "apm-production-6117-high_mean_transaction_duration",
        "serviceName": "opbeans-ruby",
        "transactionType": "request",
      },
    },
  },
  Object {
    "data": Object {
      "id": ">postgresql",
      "label": "postgresql",
      "span.destination.service.resource": "postgresql",
      "span.subtype": "postgresql",
      "span.type": "db",
    },
  },
  Object {
    "data": Object {
      "agent.name": "python",
      "id": "opbeans-python",
      "service.environment": "production",
      "service.name": "opbeans-python",
      "serviceAnomalyStats": Object {
        "actualValue": 38862.7831325301,
        "anomalyScore": 0.0725701910161626,
        "healthStatus": "healthy",
        "jobId": "apm-production-6117-high_mean_transaction_duration",
        "serviceName": "opbeans-python",
        "transactionType": "request",
      },
    },
  },
  Object {
    "data": Object {
      "id": ">elasticsearch",
      "label": "elasticsearch",
      "span.destination.service.resource": "elasticsearch",
      "span.subtype": "elasticsearch",
      "span.type": "db",
    },
  },
  Object {
    "data": Object {
      "agent.name": "nodejs",
      "id": "opbeans-node",
      "service.environment": "testing",
      "service.name": "opbeans-node",
      "serviceAnomalyStats": Object {
        "actualValue": 24819.2962962963,
        "anomalyScore": 0,
        "healthStatus": "healthy",
        "jobId": "apm-testing-41e5-high_mean_transaction_duration",
        "serviceName": "opbeans-node",
        "transactionType": "request",
      },
    },
  },
  Object {
    "data": Object {
      "agent.name": "dotnet",
      "id": "opbeans-dotnet",
      "service.environment": "production",
      "service.name": "opbeans-dotnet",
      "serviceAnomalyStats": Object {
        "actualValue": 868025.86875,
        "anomalyScore": 0,
        "healthStatus": "healthy",
        "jobId": "apm-production-6117-high_mean_transaction_duration",
        "serviceName": "opbeans-dotnet",
        "transactionType": "request",
      },
    },
  },
  Object {
    "data": Object {
      "id": ">sqlite",
      "label": "sqlite",
      "span.destination.service.resource": "sqlite",
      "span.subtype": "sqlite",
      "span.type": "db",
    },
  },
  Object {
    "data": Object {
      "agent.name": "java",
      "id": "opbeans-java",
      "service.environment": "production",
      "service.name": "opbeans-java",
      "serviceAnomalyStats": Object {
        "actualValue": 175568.855769231,
        "anomalyScore": 0,
        "healthStatus": "healthy",
        "jobId": "apm-production-6117-high_mean_transaction_duration",
        "serviceName": "opbeans-java",
        "transactionType": "request",
      },
    },
  },
  Object {
    "data": Object {
      "agent.name": "go",
      "id": "opbeans-go",
      "service.environment": "testing",
      "service.name": "opbeans-go",
      "serviceAnomalyStats": Object {
        "actualValue": 102786.319148936,
        "anomalyScore": 0,
        "healthStatus": "healthy",
        "jobId": "apm-testing-41e5-high_mean_transaction_duration",
        "serviceName": "opbeans-go",
        "transactionType": "request",
      },
    },
  },
  Object {
    "data": Object {
      "id": ">redis",
      "label": "redis",
      "span.destination.service.resource": "redis",
      "span.subtype": "redis",
      "span.type": "cache",
    },
  },
  Object {
    "data": Object {
      "agent.name": "go",
      "id": "auditbeat",
      "service.environment": null,
      "service.name": "auditbeat",
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-dotnet~>sqlite",
      "source": "opbeans-dotnet",
      "sourceData": Object {
        "agent.name": "dotnet",
        "id": "opbeans-dotnet",
        "service.environment": "production",
        "service.name": "opbeans-dotnet",
        "serviceAnomalyStats": Object {
          "actualValue": 868025.86875,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-6117-high_mean_transaction_duration",
          "serviceName": "opbeans-dotnet",
          "transactionType": "request",
        },
      },
      "target": ">sqlite",
      "targetData": Object {
        "id": ">sqlite",
        "label": "sqlite",
        "span.destination.service.resource": "sqlite",
        "span.subtype": "sqlite",
        "span.type": "db",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-go~>postgresql",
      "source": "opbeans-go",
      "sourceData": Object {
        "agent.name": "go",
        "id": "opbeans-go",
        "service.environment": "testing",
        "service.name": "opbeans-go",
        "serviceAnomalyStats": Object {
          "actualValue": 102786.319148936,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-41e5-high_mean_transaction_duration",
          "serviceName": "opbeans-go",
          "transactionType": "request",
        },
      },
      "target": ">postgresql",
      "targetData": Object {
        "id": ">postgresql",
        "label": "postgresql",
        "span.destination.service.resource": "postgresql",
        "span.subtype": "postgresql",
        "span.type": "db",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-go~opbeans-dotnet",
      "source": "opbeans-go",
      "sourceData": Object {
        "agent.name": "go",
        "id": "opbeans-go",
        "service.environment": "testing",
        "service.name": "opbeans-go",
        "serviceAnomalyStats": Object {
          "actualValue": 102786.319148936,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-41e5-high_mean_transaction_duration",
          "serviceName": "opbeans-go",
          "transactionType": "request",
        },
      },
      "target": "opbeans-dotnet",
      "targetData": Object {
        "agent.name": "dotnet",
        "id": "opbeans-dotnet",
        "service.environment": "production",
        "service.name": "opbeans-dotnet",
        "serviceAnomalyStats": Object {
          "actualValue": 868025.86875,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-6117-high_mean_transaction_duration",
          "serviceName": "opbeans-dotnet",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "bidirectional": true,
      "id": "opbeans-go~opbeans-java",
      "source": "opbeans-go",
      "sourceData": Object {
        "agent.name": "go",
        "id": "opbeans-go",
        "service.environment": "testing",
        "service.name": "opbeans-go",
        "serviceAnomalyStats": Object {
          "actualValue": 102786.319148936,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-41e5-high_mean_transaction_duration",
          "serviceName": "opbeans-go",
          "transactionType": "request",
        },
      },
      "target": "opbeans-java",
      "targetData": Object {
        "agent.name": "java",
        "id": "opbeans-java",
        "service.environment": "production",
        "service.name": "opbeans-java",
        "serviceAnomalyStats": Object {
          "actualValue": 175568.855769231,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-6117-high_mean_transaction_duration",
          "serviceName": "opbeans-java",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "bidirectional": true,
      "id": "opbeans-go~opbeans-node",
      "source": "opbeans-go",
      "sourceData": Object {
        "agent.name": "go",
        "id": "opbeans-go",
        "service.environment": "testing",
        "service.name": "opbeans-go",
        "serviceAnomalyStats": Object {
          "actualValue": 102786.319148936,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-41e5-high_mean_transaction_duration",
          "serviceName": "opbeans-go",
          "transactionType": "request",
        },
      },
      "target": "opbeans-node",
      "targetData": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
        "serviceAnomalyStats": Object {
          "actualValue": 24819.2962962963,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-41e5-high_mean_transaction_duration",
          "serviceName": "opbeans-node",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "bidirectional": true,
      "id": "opbeans-go~opbeans-python",
      "source": "opbeans-go",
      "sourceData": Object {
        "agent.name": "go",
        "id": "opbeans-go",
        "service.environment": "testing",
        "service.name": "opbeans-go",
        "serviceAnomalyStats": Object {
          "actualValue": 102786.319148936,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-41e5-high_mean_transaction_duration",
          "serviceName": "opbeans-go",
          "transactionType": "request",
        },
      },
      "target": "opbeans-python",
      "targetData": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.environment": "production",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 38862.7831325301,
          "anomalyScore": 0.0725701910161626,
          "healthStatus": "healthy",
          "jobId": "apm-production-6117-high_mean_transaction_duration",
          "serviceName": "opbeans-python",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "bidirectional": true,
      "id": "opbeans-go~opbeans-ruby",
      "source": "opbeans-go",
      "sourceData": Object {
        "agent.name": "go",
        "id": "opbeans-go",
        "service.environment": "testing",
        "service.name": "opbeans-go",
        "serviceAnomalyStats": Object {
          "actualValue": 102786.319148936,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-41e5-high_mean_transaction_duration",
          "serviceName": "opbeans-go",
          "transactionType": "request",
        },
      },
      "target": "opbeans-ruby",
      "targetData": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.environment": "production",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 62009.3356643357,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-6117-high_mean_transaction_duration",
          "serviceName": "opbeans-ruby",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-java~>postgresql",
      "source": "opbeans-java",
      "sourceData": Object {
        "agent.name": "java",
        "id": "opbeans-java",
        "service.environment": "production",
        "service.name": "opbeans-java",
        "serviceAnomalyStats": Object {
          "actualValue": 175568.855769231,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-6117-high_mean_transaction_duration",
          "serviceName": "opbeans-java",
          "transactionType": "request",
        },
      },
      "target": ">postgresql",
      "targetData": Object {
        "id": ">postgresql",
        "label": "postgresql",
        "span.destination.service.resource": "postgresql",
        "span.subtype": "postgresql",
        "span.type": "db",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-java~opbeans-dotnet",
      "source": "opbeans-java",
      "sourceData": Object {
        "agent.name": "java",
        "id": "opbeans-java",
        "service.environment": "production",
        "service.name": "opbeans-java",
        "serviceAnomalyStats": Object {
          "actualValue": 175568.855769231,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-6117-high_mean_transaction_duration",
          "serviceName": "opbeans-java",
          "transactionType": "request",
        },
      },
      "target": "opbeans-dotnet",
      "targetData": Object {
        "agent.name": "dotnet",
        "id": "opbeans-dotnet",
        "service.environment": "production",
        "service.name": "opbeans-dotnet",
        "serviceAnomalyStats": Object {
          "actualValue": 868025.86875,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-6117-high_mean_transaction_duration",
          "serviceName": "opbeans-dotnet",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-java~opbeans-go",
      "isInverseEdge": true,
      "source": "opbeans-java",
      "sourceData": Object {
        "agent.name": "java",
        "id": "opbeans-java",
        "service.environment": "production",
        "service.name": "opbeans-java",
        "serviceAnomalyStats": Object {
          "actualValue": 175568.855769231,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-6117-high_mean_transaction_duration",
          "serviceName": "opbeans-java",
          "transactionType": "request",
        },
      },
      "target": "opbeans-go",
      "targetData": Object {
        "agent.name": "go",
        "id": "opbeans-go",
        "service.environment": "testing",
        "service.name": "opbeans-go",
        "serviceAnomalyStats": Object {
          "actualValue": 102786.319148936,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-41e5-high_mean_transaction_duration",
          "serviceName": "opbeans-go",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "bidirectional": true,
      "id": "opbeans-java~opbeans-node",
      "source": "opbeans-java",
      "sourceData": Object {
        "agent.name": "java",
        "id": "opbeans-java",
        "service.environment": "production",
        "service.name": "opbeans-java",
        "serviceAnomalyStats": Object {
          "actualValue": 175568.855769231,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-6117-high_mean_transaction_duration",
          "serviceName": "opbeans-java",
          "transactionType": "request",
        },
      },
      "target": "opbeans-node",
      "targetData": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
        "serviceAnomalyStats": Object {
          "actualValue": 24819.2962962963,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-41e5-high_mean_transaction_duration",
          "serviceName": "opbeans-node",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "bidirectional": true,
      "id": "opbeans-java~opbeans-ruby",
      "source": "opbeans-java",
      "sourceData": Object {
        "agent.name": "java",
        "id": "opbeans-java",
        "service.environment": "production",
        "service.name": "opbeans-java",
        "serviceAnomalyStats": Object {
          "actualValue": 175568.855769231,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-6117-high_mean_transaction_duration",
          "serviceName": "opbeans-java",
          "transactionType": "request",
        },
      },
      "target": "opbeans-ruby",
      "targetData": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.environment": "production",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 62009.3356643357,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-6117-high_mean_transaction_duration",
          "serviceName": "opbeans-ruby",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-node~>postgresql",
      "source": "opbeans-node",
      "sourceData": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
        "serviceAnomalyStats": Object {
          "actualValue": 24819.2962962963,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-41e5-high_mean_transaction_duration",
          "serviceName": "opbeans-node",
          "transactionType": "request",
        },
      },
      "target": ">postgresql",
      "targetData": Object {
        "id": ">postgresql",
        "label": "postgresql",
        "span.destination.service.resource": "postgresql",
        "span.subtype": "postgresql",
        "span.type": "db",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-node~>redis",
      "source": "opbeans-node",
      "sourceData": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
        "serviceAnomalyStats": Object {
          "actualValue": 24819.2962962963,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-41e5-high_mean_transaction_duration",
          "serviceName": "opbeans-node",
          "transactionType": "request",
        },
      },
      "target": ">redis",
      "targetData": Object {
        "id": ">redis",
        "label": "redis",
        "span.destination.service.resource": "redis",
        "span.subtype": "redis",
        "span.type": "cache",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-node~opbeans-go",
      "isInverseEdge": true,
      "source": "opbeans-node",
      "sourceData": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
        "serviceAnomalyStats": Object {
          "actualValue": 24819.2962962963,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-41e5-high_mean_transaction_duration",
          "serviceName": "opbeans-node",
          "transactionType": "request",
        },
      },
      "target": "opbeans-go",
      "targetData": Object {
        "agent.name": "go",
        "id": "opbeans-go",
        "service.environment": "testing",
        "service.name": "opbeans-go",
        "serviceAnomalyStats": Object {
          "actualValue": 102786.319148936,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-41e5-high_mean_transaction_duration",
          "serviceName": "opbeans-go",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-node~opbeans-java",
      "isInverseEdge": true,
      "source": "opbeans-node",
      "sourceData": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
        "serviceAnomalyStats": Object {
          "actualValue": 24819.2962962963,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-41e5-high_mean_transaction_duration",
          "serviceName": "opbeans-node",
          "transactionType": "request",
        },
      },
      "target": "opbeans-java",
      "targetData": Object {
        "agent.name": "java",
        "id": "opbeans-java",
        "service.environment": "production",
        "service.name": "opbeans-java",
        "serviceAnomalyStats": Object {
          "actualValue": 175568.855769231,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-6117-high_mean_transaction_duration",
          "serviceName": "opbeans-java",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "bidirectional": true,
      "id": "opbeans-node~opbeans-python",
      "source": "opbeans-node",
      "sourceData": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
        "serviceAnomalyStats": Object {
          "actualValue": 24819.2962962963,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-41e5-high_mean_transaction_duration",
          "serviceName": "opbeans-node",
          "transactionType": "request",
        },
      },
      "target": "opbeans-python",
      "targetData": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.environment": "production",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 38862.7831325301,
          "anomalyScore": 0.0725701910161626,
          "healthStatus": "healthy",
          "jobId": "apm-production-6117-high_mean_transaction_duration",
          "serviceName": "opbeans-python",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "bidirectional": true,
      "id": "opbeans-node~opbeans-ruby",
      "source": "opbeans-node",
      "sourceData": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
        "serviceAnomalyStats": Object {
          "actualValue": 24819.2962962963,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-41e5-high_mean_transaction_duration",
          "serviceName": "opbeans-node",
          "transactionType": "request",
        },
      },
      "target": "opbeans-ruby",
      "targetData": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.environment": "production",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 62009.3356643357,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-6117-high_mean_transaction_duration",
          "serviceName": "opbeans-ruby",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-python~>elasticsearch",
      "source": "opbeans-python",
      "sourceData": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.environment": "production",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 38862.7831325301,
          "anomalyScore": 0.0725701910161626,
          "healthStatus": "healthy",
          "jobId": "apm-production-6117-high_mean_transaction_duration",
          "serviceName": "opbeans-python",
          "transactionType": "request",
        },
      },
      "target": ">elasticsearch",
      "targetData": Object {
        "id": ">elasticsearch",
        "label": "elasticsearch",
        "span.destination.service.resource": "elasticsearch",
        "span.subtype": "elasticsearch",
        "span.type": "db",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-python~>postgresql",
      "source": "opbeans-python",
      "sourceData": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.environment": "production",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 38862.7831325301,
          "anomalyScore": 0.0725701910161626,
          "healthStatus": "healthy",
          "jobId": "apm-production-6117-high_mean_transaction_duration",
          "serviceName": "opbeans-python",
          "transactionType": "request",
        },
      },
      "target": ">postgresql",
      "targetData": Object {
        "id": ">postgresql",
        "label": "postgresql",
        "span.destination.service.resource": "postgresql",
        "span.subtype": "postgresql",
        "span.type": "db",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-python~>redis",
      "source": "opbeans-python",
      "sourceData": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.environment": "production",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 38862.7831325301,
          "anomalyScore": 0.0725701910161626,
          "healthStatus": "healthy",
          "jobId": "apm-production-6117-high_mean_transaction_duration",
          "serviceName": "opbeans-python",
          "transactionType": "request",
        },
      },
      "target": ">redis",
      "targetData": Object {
        "id": ">redis",
        "label": "redis",
        "span.destination.service.resource": "redis",
        "span.subtype": "redis",
        "span.type": "cache",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-python~opbeans-go",
      "isInverseEdge": true,
      "source": "opbeans-python",
      "sourceData": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.environment": "production",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 38862.7831325301,
          "anomalyScore": 0.0725701910161626,
          "healthStatus": "healthy",
          "jobId": "apm-production-6117-high_mean_transaction_duration",
          "serviceName": "opbeans-python",
          "transactionType": "request",
        },
      },
      "target": "opbeans-go",
      "targetData": Object {
        "agent.name": "go",
        "id": "opbeans-go",
        "service.environment": "testing",
        "service.name": "opbeans-go",
        "serviceAnomalyStats": Object {
          "actualValue": 102786.319148936,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-41e5-high_mean_transaction_duration",
          "serviceName": "opbeans-go",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-python~opbeans-java",
      "source": "opbeans-python",
      "sourceData": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.environment": "production",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 38862.7831325301,
          "anomalyScore": 0.0725701910161626,
          "healthStatus": "healthy",
          "jobId": "apm-production-6117-high_mean_transaction_duration",
          "serviceName": "opbeans-python",
          "transactionType": "request",
        },
      },
      "target": "opbeans-java",
      "targetData": Object {
        "agent.name": "java",
        "id": "opbeans-java",
        "service.environment": "production",
        "service.name": "opbeans-java",
        "serviceAnomalyStats": Object {
          "actualValue": 175568.855769231,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-6117-high_mean_transaction_duration",
          "serviceName": "opbeans-java",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-python~opbeans-node",
      "isInverseEdge": true,
      "source": "opbeans-python",
      "sourceData": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.environment": "production",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 38862.7831325301,
          "anomalyScore": 0.0725701910161626,
          "healthStatus": "healthy",
          "jobId": "apm-production-6117-high_mean_transaction_duration",
          "serviceName": "opbeans-python",
          "transactionType": "request",
        },
      },
      "target": "opbeans-node",
      "targetData": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
        "serviceAnomalyStats": Object {
          "actualValue": 24819.2962962963,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-41e5-high_mean_transaction_duration",
          "serviceName": "opbeans-node",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "bidirectional": true,
      "id": "opbeans-python~opbeans-ruby",
      "source": "opbeans-python",
      "sourceData": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.environment": "production",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 38862.7831325301,
          "anomalyScore": 0.0725701910161626,
          "healthStatus": "healthy",
          "jobId": "apm-production-6117-high_mean_transaction_duration",
          "serviceName": "opbeans-python",
          "transactionType": "request",
        },
      },
      "target": "opbeans-ruby",
      "targetData": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.environment": "production",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 62009.3356643357,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-6117-high_mean_transaction_duration",
          "serviceName": "opbeans-ruby",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-ruby~>postgresql",
      "source": "opbeans-ruby",
      "sourceData": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.environment": "production",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 62009.3356643357,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-6117-high_mean_transaction_duration",
          "serviceName": "opbeans-ruby",
          "transactionType": "request",
        },
      },
      "target": ">postgresql",
      "targetData": Object {
        "id": ">postgresql",
        "label": "postgresql",
        "span.destination.service.resource": "postgresql",
        "span.subtype": "postgresql",
        "span.type": "db",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-ruby~opbeans-dotnet",
      "source": "opbeans-ruby",
      "sourceData": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.environment": "production",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 62009.3356643357,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-6117-high_mean_transaction_duration",
          "serviceName": "opbeans-ruby",
          "transactionType": "request",
        },
      },
      "target": "opbeans-dotnet",
      "targetData": Object {
        "agent.name": "dotnet",
        "id": "opbeans-dotnet",
        "service.environment": "production",
        "service.name": "opbeans-dotnet",
        "serviceAnomalyStats": Object {
          "actualValue": 868025.86875,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-6117-high_mean_transaction_duration",
          "serviceName": "opbeans-dotnet",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-ruby~opbeans-go",
      "isInverseEdge": true,
      "source": "opbeans-ruby",
      "sourceData": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.environment": "production",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 62009.3356643357,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-6117-high_mean_transaction_duration",
          "serviceName": "opbeans-ruby",
          "transactionType": "request",
        },
      },
      "target": "opbeans-go",
      "targetData": Object {
        "agent.name": "go",
        "id": "opbeans-go",
        "service.environment": "testing",
        "service.name": "opbeans-go",
        "serviceAnomalyStats": Object {
          "actualValue": 102786.319148936,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-41e5-high_mean_transaction_duration",
          "serviceName": "opbeans-go",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-ruby~opbeans-java",
      "isInverseEdge": true,
      "source": "opbeans-ruby",
      "sourceData": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.environment": "production",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 62009.3356643357,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-6117-high_mean_transaction_duration",
          "serviceName": "opbeans-ruby",
          "transactionType": "request",
        },
      },
      "target": "opbeans-java",
      "targetData": Object {
        "agent.name": "java",
        "id": "opbeans-java",
        "service.environment": "production",
        "service.name": "opbeans-java",
        "serviceAnomalyStats": Object {
          "actualValue": 175568.855769231,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-6117-high_mean_transaction_duration",
          "serviceName": "opbeans-java",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-ruby~opbeans-node",
      "isInverseEdge": true,
      "source": "opbeans-ruby",
      "sourceData": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.environment": "production",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 62009.3356643357,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-6117-high_mean_transaction_duration",
          "serviceName": "opbeans-ruby",
          "transactionType": "request",
        },
      },
      "target": "opbeans-node",
      "targetData": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
        "serviceAnomalyStats": Object {
          "actualValue": 24819.2962962963,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-41e5-high_mean_transaction_duration",
          "serviceName": "opbeans-node",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-ruby~opbeans-python",
      "isInverseEdge": true,
      "source": "opbeans-ruby",
      "sourceData": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.environment": "production",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 62009.3356643357,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-6117-high_mean_transaction_duration",
          "serviceName": "opbeans-ruby",
          "transactionType": "request",
        },
      },
      "target": "opbeans-python",
      "targetData": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.environment": "production",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 38862.7831325301,
          "anomalyScore": 0.0725701910161626,
          "healthStatus": "healthy",
          "jobId": "apm-production-6117-high_mean_transaction_duration",
          "serviceName": "opbeans-python",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-rum~opbeans-dotnet",
      "source": "opbeans-rum",
      "sourceData": Object {
        "agent.name": "rum-js",
        "id": "opbeans-rum",
        "service.environment": "testing",
        "service.name": "opbeans-rum",
        "serviceAnomalyStats": Object {
          "actualValue": 1020870.96774194,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-41e5-high_mean_transaction_duration",
          "serviceName": "opbeans-rum",
          "transactionType": "page-load",
        },
      },
      "target": "opbeans-dotnet",
      "targetData": Object {
        "agent.name": "dotnet",
        "id": "opbeans-dotnet",
        "service.environment": "production",
        "service.name": "opbeans-dotnet",
        "serviceAnomalyStats": Object {
          "actualValue": 868025.86875,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-6117-high_mean_transaction_duration",
          "serviceName": "opbeans-dotnet",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-rum~opbeans-go",
      "source": "opbeans-rum",
      "sourceData": Object {
        "agent.name": "rum-js",
        "id": "opbeans-rum",
        "service.environment": "testing",
        "service.name": "opbeans-rum",
        "serviceAnomalyStats": Object {
          "actualValue": 1020870.96774194,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-41e5-high_mean_transaction_duration",
          "serviceName": "opbeans-rum",
          "transactionType": "page-load",
        },
      },
      "target": "opbeans-go",
      "targetData": Object {
        "agent.name": "go",
        "id": "opbeans-go",
        "service.environment": "testing",
        "service.name": "opbeans-go",
        "serviceAnomalyStats": Object {
          "actualValue": 102786.319148936,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-41e5-high_mean_transaction_duration",
          "serviceName": "opbeans-go",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-rum~opbeans-java",
      "source": "opbeans-rum",
      "sourceData": Object {
        "agent.name": "rum-js",
        "id": "opbeans-rum",
        "service.environment": "testing",
        "service.name": "opbeans-rum",
        "serviceAnomalyStats": Object {
          "actualValue": 1020870.96774194,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-41e5-high_mean_transaction_duration",
          "serviceName": "opbeans-rum",
          "transactionType": "page-load",
        },
      },
      "target": "opbeans-java",
      "targetData": Object {
        "agent.name": "java",
        "id": "opbeans-java",
        "service.environment": "production",
        "service.name": "opbeans-java",
        "serviceAnomalyStats": Object {
          "actualValue": 175568.855769231,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-6117-high_mean_transaction_duration",
          "serviceName": "opbeans-java",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-rum~opbeans-node",
      "source": "opbeans-rum",
      "sourceData": Object {
        "agent.name": "rum-js",
        "id": "opbeans-rum",
        "service.environment": "testing",
        "service.name": "opbeans-rum",
        "serviceAnomalyStats": Object {
          "actualValue": 1020870.96774194,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-41e5-high_mean_transaction_duration",
          "serviceName": "opbeans-rum",
          "transactionType": "page-load",
        },
      },
      "target": "opbeans-node",
      "targetData": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
        "serviceAnomalyStats": Object {
          "actualValue": 24819.2962962963,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-41e5-high_mean_transaction_duration",
          "serviceName": "opbeans-node",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-rum~opbeans-ruby",
      "source": "opbeans-rum",
      "sourceData": Object {
        "agent.name": "rum-js",
        "id": "opbeans-rum",
        "service.environment": "testing",
        "service.name": "opbeans-rum",
        "serviceAnomalyStats": Object {
          "actualValue": 1020870.96774194,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-41e5-high_mean_transaction_duration",
          "serviceName": "opbeans-rum",
          "transactionType": "page-load",
        },
      },
      "target": "opbeans-ruby",
      "targetData": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.environment": "production",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 62009.3356643357,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-6117-high_mean_transaction_duration",
          "serviceName": "opbeans-ruby",
          "transactionType": "request",
        },
      },
    },
  },
]
`;

exports[`APM API tests trial apm_8.0.0 Service Map with data /api/apm/service-map with ML data with the default apm user returns the correct anomaly stats 3`] = `
Object {
  "elements": Array [
    Object {
      "data": Object {
        "agent.name": "rum-js",
        "id": "opbeans-rum",
        "service.environment": "testing",
        "service.name": "opbeans-rum",
        "serviceAnomalyStats": Object {
          "actualValue": 1020870.96774194,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-41e5-high_mean_transaction_duration",
          "serviceName": "opbeans-rum",
          "transactionType": "page-load",
        },
      },
    },
    Object {
      "data": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.environment": "production",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 62009.3356643357,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-6117-high_mean_transaction_duration",
          "serviceName": "opbeans-ruby",
          "transactionType": "request",
        },
      },
    },
    Object {
      "data": Object {
        "id": ">postgresql",
        "label": "postgresql",
        "span.destination.service.resource": "postgresql",
        "span.subtype": "postgresql",
        "span.type": "db",
      },
    },
    Object {
      "data": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.environment": "production",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 38862.7831325301,
          "anomalyScore": 0.0725701910161626,
          "healthStatus": "healthy",
          "jobId": "apm-production-6117-high_mean_transaction_duration",
          "serviceName": "opbeans-python",
          "transactionType": "request",
        },
      },
    },
    Object {
      "data": Object {
        "id": ">elasticsearch",
        "label": "elasticsearch",
        "span.destination.service.resource": "elasticsearch",
        "span.subtype": "elasticsearch",
        "span.type": "db",
      },
    },
    Object {
      "data": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
        "serviceAnomalyStats": Object {
          "actualValue": 24819.2962962963,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-41e5-high_mean_transaction_duration",
          "serviceName": "opbeans-node",
          "transactionType": "request",
        },
      },
    },
    Object {
      "data": Object {
        "agent.name": "dotnet",
        "id": "opbeans-dotnet",
        "service.environment": "production",
        "service.name": "opbeans-dotnet",
        "serviceAnomalyStats": Object {
          "actualValue": 868025.86875,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-6117-high_mean_transaction_duration",
          "serviceName": "opbeans-dotnet",
          "transactionType": "request",
        },
      },
    },
    Object {
      "data": Object {
        "id": ">sqlite",
        "label": "sqlite",
        "span.destination.service.resource": "sqlite",
        "span.subtype": "sqlite",
        "span.type": "db",
      },
    },
    Object {
      "data": Object {
        "agent.name": "java",
        "id": "opbeans-java",
        "service.environment": "production",
        "service.name": "opbeans-java",
        "serviceAnomalyStats": Object {
          "actualValue": 175568.855769231,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-6117-high_mean_transaction_duration",
          "serviceName": "opbeans-java",
          "transactionType": "request",
        },
      },
    },
    Object {
      "data": Object {
        "agent.name": "go",
        "id": "opbeans-go",
        "service.environment": "testing",
        "service.name": "opbeans-go",
        "serviceAnomalyStats": Object {
          "actualValue": 102786.319148936,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-41e5-high_mean_transaction_duration",
          "serviceName": "opbeans-go",
          "transactionType": "request",
        },
      },
    },
    Object {
      "data": Object {
        "id": ">redis",
        "label": "redis",
        "span.destination.service.resource": "redis",
        "span.subtype": "redis",
        "span.type": "cache",
      },
    },
    Object {
      "data": Object {
        "agent.name": "go",
        "id": "auditbeat",
        "service.environment": null,
        "service.name": "auditbeat",
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-dotnet~>sqlite",
        "source": "opbeans-dotnet",
        "sourceData": Object {
          "agent.name": "dotnet",
          "id": "opbeans-dotnet",
          "service.environment": "production",
          "service.name": "opbeans-dotnet",
          "serviceAnomalyStats": Object {
            "actualValue": 868025.86875,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-6117-high_mean_transaction_duration",
            "serviceName": "opbeans-dotnet",
            "transactionType": "request",
          },
        },
        "target": ">sqlite",
        "targetData": Object {
          "id": ">sqlite",
          "label": "sqlite",
          "span.destination.service.resource": "sqlite",
          "span.subtype": "sqlite",
          "span.type": "db",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-go~>postgresql",
        "source": "opbeans-go",
        "sourceData": Object {
          "agent.name": "go",
          "id": "opbeans-go",
          "service.environment": "testing",
          "service.name": "opbeans-go",
          "serviceAnomalyStats": Object {
            "actualValue": 102786.319148936,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-41e5-high_mean_transaction_duration",
            "serviceName": "opbeans-go",
            "transactionType": "request",
          },
        },
        "target": ">postgresql",
        "targetData": Object {
          "id": ">postgresql",
          "label": "postgresql",
          "span.destination.service.resource": "postgresql",
          "span.subtype": "postgresql",
          "span.type": "db",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-go~opbeans-dotnet",
        "source": "opbeans-go",
        "sourceData": Object {
          "agent.name": "go",
          "id": "opbeans-go",
          "service.environment": "testing",
          "service.name": "opbeans-go",
          "serviceAnomalyStats": Object {
            "actualValue": 102786.319148936,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-41e5-high_mean_transaction_duration",
            "serviceName": "opbeans-go",
            "transactionType": "request",
          },
        },
        "target": "opbeans-dotnet",
        "targetData": Object {
          "agent.name": "dotnet",
          "id": "opbeans-dotnet",
          "service.environment": "production",
          "service.name": "opbeans-dotnet",
          "serviceAnomalyStats": Object {
            "actualValue": 868025.86875,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-6117-high_mean_transaction_duration",
            "serviceName": "opbeans-dotnet",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "bidirectional": true,
        "id": "opbeans-go~opbeans-java",
        "source": "opbeans-go",
        "sourceData": Object {
          "agent.name": "go",
          "id": "opbeans-go",
          "service.environment": "testing",
          "service.name": "opbeans-go",
          "serviceAnomalyStats": Object {
            "actualValue": 102786.319148936,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-41e5-high_mean_transaction_duration",
            "serviceName": "opbeans-go",
            "transactionType": "request",
          },
        },
        "target": "opbeans-java",
        "targetData": Object {
          "agent.name": "java",
          "id": "opbeans-java",
          "service.environment": "production",
          "service.name": "opbeans-java",
          "serviceAnomalyStats": Object {
            "actualValue": 175568.855769231,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-6117-high_mean_transaction_duration",
            "serviceName": "opbeans-java",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "bidirectional": true,
        "id": "opbeans-go~opbeans-node",
        "source": "opbeans-go",
        "sourceData": Object {
          "agent.name": "go",
          "id": "opbeans-go",
          "service.environment": "testing",
          "service.name": "opbeans-go",
          "serviceAnomalyStats": Object {
            "actualValue": 102786.319148936,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-41e5-high_mean_transaction_duration",
            "serviceName": "opbeans-go",
            "transactionType": "request",
          },
        },
        "target": "opbeans-node",
        "targetData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
          "serviceAnomalyStats": Object {
            "actualValue": 24819.2962962963,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-41e5-high_mean_transaction_duration",
            "serviceName": "opbeans-node",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "bidirectional": true,
        "id": "opbeans-go~opbeans-python",
        "source": "opbeans-go",
        "sourceData": Object {
          "agent.name": "go",
          "id": "opbeans-go",
          "service.environment": "testing",
          "service.name": "opbeans-go",
          "serviceAnomalyStats": Object {
            "actualValue": 102786.319148936,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-41e5-high_mean_transaction_duration",
            "serviceName": "opbeans-go",
            "transactionType": "request",
          },
        },
        "target": "opbeans-python",
        "targetData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.environment": "production",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 38862.7831325301,
            "anomalyScore": 0.0725701910161626,
            "healthStatus": "healthy",
            "jobId": "apm-production-6117-high_mean_transaction_duration",
            "serviceName": "opbeans-python",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "bidirectional": true,
        "id": "opbeans-go~opbeans-ruby",
        "source": "opbeans-go",
        "sourceData": Object {
          "agent.name": "go",
          "id": "opbeans-go",
          "service.environment": "testing",
          "service.name": "opbeans-go",
          "serviceAnomalyStats": Object {
            "actualValue": 102786.319148936,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-41e5-high_mean_transaction_duration",
            "serviceName": "opbeans-go",
            "transactionType": "request",
          },
        },
        "target": "opbeans-ruby",
        "targetData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.environment": "production",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 62009.3356643357,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-6117-high_mean_transaction_duration",
            "serviceName": "opbeans-ruby",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-java~>postgresql",
        "source": "opbeans-java",
        "sourceData": Object {
          "agent.name": "java",
          "id": "opbeans-java",
          "service.environment": "production",
          "service.name": "opbeans-java",
          "serviceAnomalyStats": Object {
            "actualValue": 175568.855769231,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-6117-high_mean_transaction_duration",
            "serviceName": "opbeans-java",
            "transactionType": "request",
          },
        },
        "target": ">postgresql",
        "targetData": Object {
          "id": ">postgresql",
          "label": "postgresql",
          "span.destination.service.resource": "postgresql",
          "span.subtype": "postgresql",
          "span.type": "db",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-java~opbeans-dotnet",
        "source": "opbeans-java",
        "sourceData": Object {
          "agent.name": "java",
          "id": "opbeans-java",
          "service.environment": "production",
          "service.name": "opbeans-java",
          "serviceAnomalyStats": Object {
            "actualValue": 175568.855769231,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-6117-high_mean_transaction_duration",
            "serviceName": "opbeans-java",
            "transactionType": "request",
          },
        },
        "target": "opbeans-dotnet",
        "targetData": Object {
          "agent.name": "dotnet",
          "id": "opbeans-dotnet",
          "service.environment": "production",
          "service.name": "opbeans-dotnet",
          "serviceAnomalyStats": Object {
            "actualValue": 868025.86875,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-6117-high_mean_transaction_duration",
            "serviceName": "opbeans-dotnet",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-java~opbeans-go",
        "isInverseEdge": true,
        "source": "opbeans-java",
        "sourceData": Object {
          "agent.name": "java",
          "id": "opbeans-java",
          "service.environment": "production",
          "service.name": "opbeans-java",
          "serviceAnomalyStats": Object {
            "actualValue": 175568.855769231,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-6117-high_mean_transaction_duration",
            "serviceName": "opbeans-java",
            "transactionType": "request",
          },
        },
        "target": "opbeans-go",
        "targetData": Object {
          "agent.name": "go",
          "id": "opbeans-go",
          "service.environment": "testing",
          "service.name": "opbeans-go",
          "serviceAnomalyStats": Object {
            "actualValue": 102786.319148936,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-41e5-high_mean_transaction_duration",
            "serviceName": "opbeans-go",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "bidirectional": true,
        "id": "opbeans-java~opbeans-node",
        "source": "opbeans-java",
        "sourceData": Object {
          "agent.name": "java",
          "id": "opbeans-java",
          "service.environment": "production",
          "service.name": "opbeans-java",
          "serviceAnomalyStats": Object {
            "actualValue": 175568.855769231,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-6117-high_mean_transaction_duration",
            "serviceName": "opbeans-java",
            "transactionType": "request",
          },
        },
        "target": "opbeans-node",
        "targetData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
          "serviceAnomalyStats": Object {
            "actualValue": 24819.2962962963,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-41e5-high_mean_transaction_duration",
            "serviceName": "opbeans-node",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "bidirectional": true,
        "id": "opbeans-java~opbeans-ruby",
        "source": "opbeans-java",
        "sourceData": Object {
          "agent.name": "java",
          "id": "opbeans-java",
          "service.environment": "production",
          "service.name": "opbeans-java",
          "serviceAnomalyStats": Object {
            "actualValue": 175568.855769231,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-6117-high_mean_transaction_duration",
            "serviceName": "opbeans-java",
            "transactionType": "request",
          },
        },
        "target": "opbeans-ruby",
        "targetData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.environment": "production",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 62009.3356643357,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-6117-high_mean_transaction_duration",
            "serviceName": "opbeans-ruby",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-node~>postgresql",
        "source": "opbeans-node",
        "sourceData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
          "serviceAnomalyStats": Object {
            "actualValue": 24819.2962962963,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-41e5-high_mean_transaction_duration",
            "serviceName": "opbeans-node",
            "transactionType": "request",
          },
        },
        "target": ">postgresql",
        "targetData": Object {
          "id": ">postgresql",
          "label": "postgresql",
          "span.destination.service.resource": "postgresql",
          "span.subtype": "postgresql",
          "span.type": "db",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-node~>redis",
        "source": "opbeans-node",
        "sourceData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
          "serviceAnomalyStats": Object {
            "actualValue": 24819.2962962963,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-41e5-high_mean_transaction_duration",
            "serviceName": "opbeans-node",
            "transactionType": "request",
          },
        },
        "target": ">redis",
        "targetData": Object {
          "id": ">redis",
          "label": "redis",
          "span.destination.service.resource": "redis",
          "span.subtype": "redis",
          "span.type": "cache",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-node~opbeans-go",
        "isInverseEdge": true,
        "source": "opbeans-node",
        "sourceData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
          "serviceAnomalyStats": Object {
            "actualValue": 24819.2962962963,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-41e5-high_mean_transaction_duration",
            "serviceName": "opbeans-node",
            "transactionType": "request",
          },
        },
        "target": "opbeans-go",
        "targetData": Object {
          "agent.name": "go",
          "id": "opbeans-go",
          "service.environment": "testing",
          "service.name": "opbeans-go",
          "serviceAnomalyStats": Object {
            "actualValue": 102786.319148936,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-41e5-high_mean_transaction_duration",
            "serviceName": "opbeans-go",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-node~opbeans-java",
        "isInverseEdge": true,
        "source": "opbeans-node",
        "sourceData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
          "serviceAnomalyStats": Object {
            "actualValue": 24819.2962962963,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-41e5-high_mean_transaction_duration",
            "serviceName": "opbeans-node",
            "transactionType": "request",
          },
        },
        "target": "opbeans-java",
        "targetData": Object {
          "agent.name": "java",
          "id": "opbeans-java",
          "service.environment": "production",
          "service.name": "opbeans-java",
          "serviceAnomalyStats": Object {
            "actualValue": 175568.855769231,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-6117-high_mean_transaction_duration",
            "serviceName": "opbeans-java",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "bidirectional": true,
        "id": "opbeans-node~opbeans-python",
        "source": "opbeans-node",
        "sourceData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
          "serviceAnomalyStats": Object {
            "actualValue": 24819.2962962963,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-41e5-high_mean_transaction_duration",
            "serviceName": "opbeans-node",
            "transactionType": "request",
          },
        },
        "target": "opbeans-python",
        "targetData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.environment": "production",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 38862.7831325301,
            "anomalyScore": 0.0725701910161626,
            "healthStatus": "healthy",
            "jobId": "apm-production-6117-high_mean_transaction_duration",
            "serviceName": "opbeans-python",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "bidirectional": true,
        "id": "opbeans-node~opbeans-ruby",
        "source": "opbeans-node",
        "sourceData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
          "serviceAnomalyStats": Object {
            "actualValue": 24819.2962962963,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-41e5-high_mean_transaction_duration",
            "serviceName": "opbeans-node",
            "transactionType": "request",
          },
        },
        "target": "opbeans-ruby",
        "targetData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.environment": "production",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 62009.3356643357,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-6117-high_mean_transaction_duration",
            "serviceName": "opbeans-ruby",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-python~>elasticsearch",
        "source": "opbeans-python",
        "sourceData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.environment": "production",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 38862.7831325301,
            "anomalyScore": 0.0725701910161626,
            "healthStatus": "healthy",
            "jobId": "apm-production-6117-high_mean_transaction_duration",
            "serviceName": "opbeans-python",
            "transactionType": "request",
          },
        },
        "target": ">elasticsearch",
        "targetData": Object {
          "id": ">elasticsearch",
          "label": "elasticsearch",
          "span.destination.service.resource": "elasticsearch",
          "span.subtype": "elasticsearch",
          "span.type": "db",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-python~>postgresql",
        "source": "opbeans-python",
        "sourceData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.environment": "production",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 38862.7831325301,
            "anomalyScore": 0.0725701910161626,
            "healthStatus": "healthy",
            "jobId": "apm-production-6117-high_mean_transaction_duration",
            "serviceName": "opbeans-python",
            "transactionType": "request",
          },
        },
        "target": ">postgresql",
        "targetData": Object {
          "id": ">postgresql",
          "label": "postgresql",
          "span.destination.service.resource": "postgresql",
          "span.subtype": "postgresql",
          "span.type": "db",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-python~>redis",
        "source": "opbeans-python",
        "sourceData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.environment": "production",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 38862.7831325301,
            "anomalyScore": 0.0725701910161626,
            "healthStatus": "healthy",
            "jobId": "apm-production-6117-high_mean_transaction_duration",
            "serviceName": "opbeans-python",
            "transactionType": "request",
          },
        },
        "target": ">redis",
        "targetData": Object {
          "id": ">redis",
          "label": "redis",
          "span.destination.service.resource": "redis",
          "span.subtype": "redis",
          "span.type": "cache",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-python~opbeans-go",
        "isInverseEdge": true,
        "source": "opbeans-python",
        "sourceData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.environment": "production",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 38862.7831325301,
            "anomalyScore": 0.0725701910161626,
            "healthStatus": "healthy",
            "jobId": "apm-production-6117-high_mean_transaction_duration",
            "serviceName": "opbeans-python",
            "transactionType": "request",
          },
        },
        "target": "opbeans-go",
        "targetData": Object {
          "agent.name": "go",
          "id": "opbeans-go",
          "service.environment": "testing",
          "service.name": "opbeans-go",
          "serviceAnomalyStats": Object {
            "actualValue": 102786.319148936,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-41e5-high_mean_transaction_duration",
            "serviceName": "opbeans-go",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-python~opbeans-java",
        "source": "opbeans-python",
        "sourceData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.environment": "production",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 38862.7831325301,
            "anomalyScore": 0.0725701910161626,
            "healthStatus": "healthy",
            "jobId": "apm-production-6117-high_mean_transaction_duration",
            "serviceName": "opbeans-python",
            "transactionType": "request",
          },
        },
        "target": "opbeans-java",
        "targetData": Object {
          "agent.name": "java",
          "id": "opbeans-java",
          "service.environment": "production",
          "service.name": "opbeans-java",
          "serviceAnomalyStats": Object {
            "actualValue": 175568.855769231,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-6117-high_mean_transaction_duration",
            "serviceName": "opbeans-java",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-python~opbeans-node",
        "isInverseEdge": true,
        "source": "opbeans-python",
        "sourceData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.environment": "production",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 38862.7831325301,
            "anomalyScore": 0.0725701910161626,
            "healthStatus": "healthy",
            "jobId": "apm-production-6117-high_mean_transaction_duration",
            "serviceName": "opbeans-python",
            "transactionType": "request",
          },
        },
        "target": "opbeans-node",
        "targetData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
          "serviceAnomalyStats": Object {
            "actualValue": 24819.2962962963,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-41e5-high_mean_transaction_duration",
            "serviceName": "opbeans-node",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "bidirectional": true,
        "id": "opbeans-python~opbeans-ruby",
        "source": "opbeans-python",
        "sourceData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.environment": "production",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 38862.7831325301,
            "anomalyScore": 0.0725701910161626,
            "healthStatus": "healthy",
            "jobId": "apm-production-6117-high_mean_transaction_duration",
            "serviceName": "opbeans-python",
            "transactionType": "request",
          },
        },
        "target": "opbeans-ruby",
        "targetData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.environment": "production",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 62009.3356643357,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-6117-high_mean_transaction_duration",
            "serviceName": "opbeans-ruby",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-ruby~>postgresql",
        "source": "opbeans-ruby",
        "sourceData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.environment": "production",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 62009.3356643357,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-6117-high_mean_transaction_duration",
            "serviceName": "opbeans-ruby",
            "transactionType": "request",
          },
        },
        "target": ">postgresql",
        "targetData": Object {
          "id": ">postgresql",
          "label": "postgresql",
          "span.destination.service.resource": "postgresql",
          "span.subtype": "postgresql",
          "span.type": "db",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-ruby~opbeans-dotnet",
        "source": "opbeans-ruby",
        "sourceData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.environment": "production",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 62009.3356643357,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-6117-high_mean_transaction_duration",
            "serviceName": "opbeans-ruby",
            "transactionType": "request",
          },
        },
        "target": "opbeans-dotnet",
        "targetData": Object {
          "agent.name": "dotnet",
          "id": "opbeans-dotnet",
          "service.environment": "production",
          "service.name": "opbeans-dotnet",
          "serviceAnomalyStats": Object {
            "actualValue": 868025.86875,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-6117-high_mean_transaction_duration",
            "serviceName": "opbeans-dotnet",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-ruby~opbeans-go",
        "isInverseEdge": true,
        "source": "opbeans-ruby",
        "sourceData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.environment": "production",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 62009.3356643357,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-6117-high_mean_transaction_duration",
            "serviceName": "opbeans-ruby",
            "transactionType": "request",
          },
        },
        "target": "opbeans-go",
        "targetData": Object {
          "agent.name": "go",
          "id": "opbeans-go",
          "service.environment": "testing",
          "service.name": "opbeans-go",
          "serviceAnomalyStats": Object {
            "actualValue": 102786.319148936,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-41e5-high_mean_transaction_duration",
            "serviceName": "opbeans-go",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-ruby~opbeans-java",
        "isInverseEdge": true,
        "source": "opbeans-ruby",
        "sourceData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.environment": "production",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 62009.3356643357,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-6117-high_mean_transaction_duration",
            "serviceName": "opbeans-ruby",
            "transactionType": "request",
          },
        },
        "target": "opbeans-java",
        "targetData": Object {
          "agent.name": "java",
          "id": "opbeans-java",
          "service.environment": "production",
          "service.name": "opbeans-java",
          "serviceAnomalyStats": Object {
            "actualValue": 175568.855769231,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-6117-high_mean_transaction_duration",
            "serviceName": "opbeans-java",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-ruby~opbeans-node",
        "isInverseEdge": true,
        "source": "opbeans-ruby",
        "sourceData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.environment": "production",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 62009.3356643357,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-6117-high_mean_transaction_duration",
            "serviceName": "opbeans-ruby",
            "transactionType": "request",
          },
        },
        "target": "opbeans-node",
        "targetData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
          "serviceAnomalyStats": Object {
            "actualValue": 24819.2962962963,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-41e5-high_mean_transaction_duration",
            "serviceName": "opbeans-node",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-ruby~opbeans-python",
        "isInverseEdge": true,
        "source": "opbeans-ruby",
        "sourceData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.environment": "production",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 62009.3356643357,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-6117-high_mean_transaction_duration",
            "serviceName": "opbeans-ruby",
            "transactionType": "request",
          },
        },
        "target": "opbeans-python",
        "targetData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.environment": "production",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 38862.7831325301,
            "anomalyScore": 0.0725701910161626,
            "healthStatus": "healthy",
            "jobId": "apm-production-6117-high_mean_transaction_duration",
            "serviceName": "opbeans-python",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-rum~opbeans-dotnet",
        "source": "opbeans-rum",
        "sourceData": Object {
          "agent.name": "rum-js",
          "id": "opbeans-rum",
          "service.environment": "testing",
          "service.name": "opbeans-rum",
          "serviceAnomalyStats": Object {
            "actualValue": 1020870.96774194,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-41e5-high_mean_transaction_duration",
            "serviceName": "opbeans-rum",
            "transactionType": "page-load",
          },
        },
        "target": "opbeans-dotnet",
        "targetData": Object {
          "agent.name": "dotnet",
          "id": "opbeans-dotnet",
          "service.environment": "production",
          "service.name": "opbeans-dotnet",
          "serviceAnomalyStats": Object {
            "actualValue": 868025.86875,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-6117-high_mean_transaction_duration",
            "serviceName": "opbeans-dotnet",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-rum~opbeans-go",
        "source": "opbeans-rum",
        "sourceData": Object {
          "agent.name": "rum-js",
          "id": "opbeans-rum",
          "service.environment": "testing",
          "service.name": "opbeans-rum",
          "serviceAnomalyStats": Object {
            "actualValue": 1020870.96774194,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-41e5-high_mean_transaction_duration",
            "serviceName": "opbeans-rum",
            "transactionType": "page-load",
          },
        },
        "target": "opbeans-go",
        "targetData": Object {
          "agent.name": "go",
          "id": "opbeans-go",
          "service.environment": "testing",
          "service.name": "opbeans-go",
          "serviceAnomalyStats": Object {
            "actualValue": 102786.319148936,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-41e5-high_mean_transaction_duration",
            "serviceName": "opbeans-go",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-rum~opbeans-java",
        "source": "opbeans-rum",
        "sourceData": Object {
          "agent.name": "rum-js",
          "id": "opbeans-rum",
          "service.environment": "testing",
          "service.name": "opbeans-rum",
          "serviceAnomalyStats": Object {
            "actualValue": 1020870.96774194,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-41e5-high_mean_transaction_duration",
            "serviceName": "opbeans-rum",
            "transactionType": "page-load",
          },
        },
        "target": "opbeans-java",
        "targetData": Object {
          "agent.name": "java",
          "id": "opbeans-java",
          "service.environment": "production",
          "service.name": "opbeans-java",
          "serviceAnomalyStats": Object {
            "actualValue": 175568.855769231,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-6117-high_mean_transaction_duration",
            "serviceName": "opbeans-java",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-rum~opbeans-node",
        "source": "opbeans-rum",
        "sourceData": Object {
          "agent.name": "rum-js",
          "id": "opbeans-rum",
          "service.environment": "testing",
          "service.name": "opbeans-rum",
          "serviceAnomalyStats": Object {
            "actualValue": 1020870.96774194,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-41e5-high_mean_transaction_duration",
            "serviceName": "opbeans-rum",
            "transactionType": "page-load",
          },
        },
        "target": "opbeans-node",
        "targetData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
          "serviceAnomalyStats": Object {
            "actualValue": 24819.2962962963,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-41e5-high_mean_transaction_duration",
            "serviceName": "opbeans-node",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-rum~opbeans-ruby",
        "source": "opbeans-rum",
        "sourceData": Object {
          "agent.name": "rum-js",
          "id": "opbeans-rum",
          "service.environment": "testing",
          "service.name": "opbeans-rum",
          "serviceAnomalyStats": Object {
            "actualValue": 1020870.96774194,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-41e5-high_mean_transaction_duration",
            "serviceName": "opbeans-rum",
            "transactionType": "page-load",
          },
        },
        "target": "opbeans-ruby",
        "targetData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.environment": "production",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 62009.3356643357,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-6117-high_mean_transaction_duration",
            "serviceName": "opbeans-ruby",
            "transactionType": "request",
          },
        },
      },
    },
  ],
}
`;
